# MOBILE_MANIPULATOR

./: README.md
manipulator/: CMakeLists.txt  package.xml
manipulator/config/: manipulator_controller.yaml
manipulator/launch/: arm.launch  main.launch  manipulator_control.launch  manipulator_gazebo.launch
manipulator/src/: mimic_joint_plugin.cpp
manipulator/urdf/: manipulator.gazebo.xacro  manipulator.transmission.xacro  manipulator.urdf.xacro  manipulator_robot.urdf.xacro
tb3_manipulator/: CMakeLists.txt  package.xml
tb3_manipulator/data/: Circle_Tracking.xlsx  Line_Tracking.xlsx  circle.xlsx  line_data.xlsx
tb3_manipulator/launch/: tb3_manipulator_gazebo.launch
tb3_manipulator/scripts/: data_filter.py  drive_class.py  init_pose_pub.py  link_plotter.py  move_bot.py  my_trajectory_follower.py  path_planner.py  test.py  trajectory_follower.py
tb3_manipulator/urdf/: tb3_manipulator.urdf.xacro
videos/: mm_point2-2023-09-10_05.16.15
